[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools"
]

[project]
name = "mfjet"
description = "Minkowski functionals in jet physics"
authors = [{name = "Sung Hak Lim"}]
maintainers = [
    {name = "Sung Hak Lim"}
]

requires-python = ">=3.7"
dependencies = [
    "numpy",
    "scipy",
    "shapely>=2",
]

readme = "README.md"
license = {file = "LICENSE.md"}

dynamic = ["version"]

[tool.setuptools.packages.find]
include = ["mfjet"]
exclude = ["docs", "tests", "examples"]
